--- a/MyBlog/templates/blogList.html
+++ b/MyBlog/templates/blogList.html
@@ -7,9 +7,11 @@
 <body>
 
 {% if modification == 'add' %}
-<h3> New Blog Added !!!</h3>
+<h3 color="ff0ff0"> New Blog Added !!!</h3>
 {% elif modification == 'delete' %}
-<h3> One blog deleted!!!</h3>
+<h3 color="ff0ff0"> One blog deleted!!!</h3>
+{% elif modification == 'edit' %}
+<h3 color="ff0ff0"> One blog edited!!!</h3>
 {% endif %}
 
 {% for blog in blog_list %}
