Modification to display some session informations

--- a/MyBlog/templates/blogList.html
+++ b/MyBlog/templates/blogList.html
@@ -21,4 +21,13 @@
 {% endfor %}
 
 </body>
+<hr>
+<ol>
+ <li>Session start date: {{session_start_time}}</li>
+ <li>Articles visited:</li>
+ <li>Articles created:</li>
+ <li>Articles deleted:</li>
+
+</ol>
+
 </html>
