--- a/MyBlog/templates/edit.html
+++ b/MyBlog/templates/edit.html
@@ -7,7 +7,7 @@
 <body>
     <form action="/editblog/{{ blog.id }}/" method="post">
         {% csrf_token %}
-        Blog Title: <input type="text" name = "title" placeholder="{{ blog.title }} id = {{ blog.id }}"><br>
+        Blog Title: <input type="text" name = "title" value = "{{ blog.title }}" ><br>
         <textarea name="content" cols="80" rows="30">{{ blog.content_body }}</textarea><br>
         <input type="submit" value="Save">
     </form>
