--- a/MyBlog/templates/edit.html
+++ b/MyBlog/templates/edit.html
@@ -2,14 +2,22 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <title>Edit</title>
 </head>
 <body>
     <form action="/editblog/{{ blog.id }}/" method="post">
         {% csrf_token %}
-        Blog Title: <input type="text" name = "title" value = "{{ blog.title }}" ><br>
-        <textarea name="content" cols="80" rows="30">{{ blog.content_body }}</textarea><br>
-        <input type="submit" value="Save">
+        <div class="form-group">
+            <label for="title"> Blog Title </label>
+            <input type="text" name = "title" id="title" value = "{{ blog.title }}" class="form-control" ><br>
+        </div>
+
+        <div class="form-group">
+            <label for="content"> Content </label>
+            <textarea name="content" id ="content" cols="80" rows="20" class="form-control">{{ blog.content_body }}</textarea><br>
+        </div>
+        <input type="submit" class="btn btn-primary" value="Save">
     </form>
 
 </body>
