--- a/MyBlog/templates/conflict.html
+++ b/MyBlog/templates/conflict.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title> Conflict </title>
 </head>
 <body>
 <h1>{{ blog.title }}</h1>
