--- a/MyBlog/templates/edit.html
+++ b/MyBlog/templates/edit.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <title>Edit</title>
+    <title>Edit blog</title>
 </head>
 <body>
     <form action="/editblog/{{ blog.id }}/" method="post">
