--- a/MyBlog/templates/conflict.html
+++ b/MyBlog/templates/conflict.html
@@ -5,19 +5,24 @@
     <title> Conflict </title>
 </head>
 <body>
-<h1>{{ blog.title }}</h1>
-   The article has been modified while you were editing it.
+<p>The article has been modified while you were editing it.</p>
 
-   <h2>Current version</h2>
-   <p>{{ blog.content_body }}</p>
+   <hr>
+    <h2>Current version</h2>
+    <h3> Title: {{ blog.title }}</h3>
+    <p>{{ blog.content_body }}</p>
+   <hr>
 
    <h2>Your version</h2>
    <p>{{user_content}}</p>
 
+    <hr>
    <h2>New version</h2>
    Please combine the current version and your version into a new article
     <form action="/editblog/{{ blog.id }}/" method="post">
     {% csrf_token %}
+    <label for="title"> Blog Title </label>
+    <input type="text" name = "title" id="title" value = "{{ blog.title }}" ><br>
     <textarea name="content" cols="80" rows="30">{{ blog.content_body }}</textarea><br>
     <input type="hidden" name="edited_version" value="{{ edited_version }}" />
     <input type="submit" value="Save">
